// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`French language Empty input 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Brosse À Dents Électrique",
  },
  Object {
    "id": 20,
    "rating": undefined,
    "title": "Câble Lightning vers USB A",
  },
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Sacs de Rangement Sous Vide",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Piles alcalines 1,5 V AA - Lot de 12",
  },
]
`;

exports[`French language Equality 1`] = `
Array [
  Object {
    "id": 40,
    "rating": undefined,
    "title": "[Sacs] [de] [Rangement] [Sous] [Vide]",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Piles alcalines 1,5 V AA - Lot [de] 12",
  },
]
`;

exports[`French language Normalization 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Brosse À Dents [Électrique]",
  },
]
`;

exports[`French language Normalization 2`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Brosse À Dents [Électrique]",
  },
]
`;

exports[`French language Partiles 1`] = `
Array [
  Object {
    "id": 30,
    "rating": undefined,
    "title": "Brosse À [De]nts Électrique",
  },
  Object {
    "id": 40,
    "rating": undefined,
    "title": "Sacs [de] Rangement Sous Vide",
  },
  Object {
    "id": 10,
    "rating": undefined,
    "title": "Piles alcalines 1,5 V AA - Lot [de] 12",
  },
]
`;

exports[`French language Stemming 1`] = `
Array [
  Object {
    "id": 10,
    "rating": undefined,
    "title": "[Pile]s alcalines 1,5 V [AA] - Lot de 12",
  },
]
`;
